@@ -5,7 +5,8 @@ Changelog
 1.0b12 (unreleased)
 ===================
 
-- Nothing changed yet.
+- #12898: build.Configure component was broken when using the default 
+  prefix.
 
 
 1.0b11 (2013-10-17)
